<resources>
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="sdnListLabel">SDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access failure.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_rejectCallAndSms">拒接并回复短信</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_endCall">End call</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Show dialpad</string>
    <string name="menu_hideDialpad">Hide dialpad</string>
    <string name="menu_answerAndHold">Hold current call\n&amp; answer</string>
    <string name="menu_answerAndEnd">End current call\n&amp; answer</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">Press Menu for call options \u0020• \u0020Use keyboard to dial</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading…</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock…</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to {0}</string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="gsm_umts_options">GSM/UMTS Options</string>
    <string name="cdma_options">CDMA Options</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="prefer_2g">Use only 2G networks</string>
    <string name="prefer_2g_summary">Saves battery</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="autoip">智能IP拨号</string>
    <string name="autoip_sum">为异地呼叫号码自动添加IP号码前缀，需要在下面输入IP号码前缀和当前所在地区号</string>
    <string name="ip_prefix">IP号码前缀</string>
    <string name="ip_prefix_sum">运营商的IP拨号前缀:%s</string>
    <string name="current_areacode">所在地区号</string>
    <string name="current_areacode_sum">当前所在地区号，若漫游则应为漫游地区号。例如:010</string>
    <string name="always_enable_mms">始终接收彩信</string>
    <string name="always_enable_mms_summary">在禁用数据时依然接收彩信, 在国内不会发生任何费用</string>
    <string name="dialer_click_pref_title">单击拨号列表操作</string>
    <string name="auto_dialpad_pref_title">自动打开拨号键盘</string>
    <string name="enable_proximity_title">启用距离感应器</string>
    <string name="enable_proximity_summary">通话中使用距离感应器自动开关屏幕</string>
    <string name="crystaltalk_title">丽音设置</string>
    <string name="crystaltalk_summary">优化呼叫音频配置</string>
    <string name="phone_call_pref_title">手机来电</string>
    <string name="turnover_mute_title">翻转静音</string>
    <string name="handon_ringer_title">拿起时铃声减弱</string>
    <string name="allow_3rd_app_listen_phone_event_title">第三方电话应用程序</string>
    <string name="allow_3rd_app_listen_phone_event_summary">允许第三方电话应用程序监听电话事件</string>
    <string name="show_quick_contact_badge_title">显示头像</string>
    <string name="show_call_log_number_title">显示号码</string>
    <string name="voice_number_hint">请输入语音信箱号码</string>
    <string name="predefined_hangup_sms_title">预置来电挂断短信</string>
    <string name="predefined_hangup_sms_summary">来电时挂断并发送短信的默认内容。</string>
    <string name="pref_dialer_list_title">拨号列表</string>
    <string name="pref_outgoing_call_title">手机呼出</string>
    <string name="pref_phone_security_title">电话安全</string>
    <string name="pref_more_settings_title">更多设置</string>
    <string name="sip_settings">Internet call settings</string>
    <string name="sip_accounts_title">Accounts</string>
    <string name="sip_call_options_title">Use Internet calling</string>
    <string name="sip_call_options_wifi_only_title">Use Internet calling (Wi-Fi only)</string>
</resources>