<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceCategory>
        <PreferenceScreen android:persistent="false" android:title="@string/apn_settings" android:key="button_apn_key">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.ApnSettings" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory>
        <com.android.phone.Use2GOnlyCheckBoxPreference android:persistent="false" android:title="@string/prefer_2g" android:key="button_prefer_2g_key" android:summary="@string/prefer_2g_summary" />
    </PreferenceCategory>
    <PreferenceCategory>
        <PreferenceScreen android:persistent="false" android:title="@string/networks" android:key="button_carrier_sel_key">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.NetworkSetting" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>